--- a/compte-rendu.tex
+++ b/compte-rendu.tex
@@ -583,6 +583,36 @@ Afin d'améliorer le temps de calcul et d'optimiser l'algorithme, nous nous somm
 
 \section{Définition}
 
+Nous avons vu précédemment que l'architecture du réseau de neurones peut être lourde autant du point de vue modélisation que du point de vue calcul. Pour motiver l'apparition des graphes de calcul prenons l'exemple d'un réseau de neurones à $m$ entrées possèdant une seule couche de $n$ neurones ayant pour fonction d'activation une sigmoïde $\sigma$.
+
+Nous pourrions modéliser ce réseau de neurone en définissant $n$ neurones ayant chacun son vecteur poids mais une façon équivalente de modéliser ce système est de rassembler tous les poids dans une matrice $W \in \mathbb{R}^{m \times n}$. En notant $x \in \mathbb{R}^m$ le vecteur ligne des entrées du réseau, on a alors que la sortie est :
+$$y = \sigma(xW)$$
+où la fonction $\sigma$ s'applique terme à terme. 
+
+Cette manière de modéliser a plusieurs avantages. Tout d'abord, elle est plus compacte et simple à manipuler. Puis, elle a un avantage certain pour notre implémentation en Python car elle permet d'utiliser pleinement la librairie d'algèbre linéaire \texttt{numpy} ce qui accélerera grandement les calculs. Enfin, il est facile d'étendre la formule précédente au calcul de la sortie de plusieurs vecteurs d'entrées. En effet si $X \in \mathbb{R}^{l \times m}$ est une matrice contenant $l$ vecteurs d'entrées alors la sortie du réseau s'écrit :
+$$Y = \sigma(XW)$$
+
+On aurait donc envie de s'affranchir de la structure du neurone pour seulement modéliser les opérations mathématiques effectuées par le réseau.
+
+Un graphe de calcul est simplement un graphe représentant une formule mathématique. Un n\oe{}ud de ce graphe représente soit une constante, une variable, des poids ou une opération mathématique.
+
+Par exemple, le graphe de calcul représente le réseau présenté ci-dessus est :
+
+% Insérer le graphe du réseau
+
+Finalement, nous ne sommes même pas obligés de rester cantonnés à des graphes de calculs représentant des réseaux de neurones,  nous pouvons modéliser un beaucoup plus grand ensemble de fonctions mathématiques grace à ce formalisme.
+
+\section{Dérivation automatique}
+
+Nous avons modéliser nos réseaux de manière plus efficace. Il reste cependant un problème à résoudre. Nous avons besoin de calculer la dérivée du coût $E$ par rapport aux poids avant de pouvoir utiliser l'algorithme de la descente du gradient.
+
+Afin de réaliser cela, nos n\oe{}uds représentant des opérations mathématiques ne seront pas seulement responsable de calculer une sortie mais aussi de propager une erreur.
+
+\section{N\oe{}uds}
+
+
+\section{Legacy}
+
 Un graphe de calcul est la représentation de fonctions composées comme un réseau d’entités interconnectés. Chacune de ces entités est une fonction ou une opération, cela permet alors une meilleure visualisation de la tâche globale effectuée par le réseau ainsi que les relations entre deux neurones successifs. On appellera par la suite nœud parent un nœud situé en amont du réseau (i.e. plus proche des inputs) par rapport à un autre (appelé alors nœud enfant) et en lien direct avec lui. 
 
 L’intérêt principal de cette représentation est la rapidité et la facilité de l’implémentation de l’algorithme de backpropagation. En effet, le caractère modulaire de cette dernière rend aisé le calcul de gradient en appliquant la règle de la chaîne, comme le montre l’exemple suivant :
@@ -742,28 +772,63 @@ Nous pouvons alors distinguer trois cas reflétant les principaux comportements 
 \chapter{Réseaux de neurones récurrents}
 \section{Motivation}
 Nous avons pu voir que les réseaux feedforward peuvent être utilisés afin d'appendre à générer la sortie voulu en fonction de l'entrée du réseau. 
-Néanmoins, ces réseaux sont limités à des entrées et des sorties de tailles fixes. De plus il ne peuvent gérer des réseaux présentant des boucles. On utilise alors des réseaux récurrents qui permettent un traitement plus efficace des séquences de données. On pourra ainsi prévoir la suite d'une séquence.
-\bigbreak
+Néanmoins, ces réseaux sont limités à des entrées et des sorties de tailles fixes. De plus il ne peuvent gérer des réseaux présentant des cycles. On utilise alors des réseaux récurrents qui permettent un traitement plus efficace des séquences de données. On pourra ainsi prévoir la suite d'une séquence.
+
 Nous nous intéresserons à deux algorithmes permettant l'apprentissage des réseaux récurrents : Real Time Recurrent Learning (RTRL) et Back Propagation Through Time (BPTT).
 
-Dans un premier temps, nous comparerons ces algorithmes sur l'apprentissage de la grammaire de Reber, ayant un nombre d'états fini. Nous utiliserons la grammaire simple présentée sur la figure \ref{Grammaire de Reber simple}.
+\section{Dépliage}
+
+Nous avons dit précédemment qu'un réseau de neurones récurrent est un réseau possédant des cycles. Néanmoins, il est difficile d'imaginer que la valeur de sortie d'un neurone au temps $t$ dépende de la sortie de ce même neurone au temps $t$. Pour résoudre ce problème, nous allons ajouter une dimension temporelle à nos réseaux et permettre aux neurones au temps $t$ de dépendre des valeurs d'autres neurones au temps $t-1$.
+
+Afin de mettre en évidence cette dépendance temporelle sur nos graphes, les arêtes reliant la sortie d'un neurone au temps $t-1$ à un neurone au temps $t$ vont être annontées par un carré comme sur la figure \ref{arete_retard}. On les appelera arête "retard".
+
+% Insérer figure avec une arête retard
+
+On a alors de nouvelles équations pour la sortie du neurone $j$ :
+\begin{equation}
+\left\{
+\begin{array}{ll}
+t = 0, & y_j(t) = 0 \\
+\forall t \geq 1, & y_{j}(t) = g_{j}(\sum_{i \in Pa_t(j)}{w_{ji}y_{i}(t)} + \sum_{i \in Pa_{t-1}(j)}{w'_{ji}y_{i}(t-1)})
+\end{array}
+\right.
+\end{equation}
+où $Pa_t(j)$ est l'ensemble des neurones ayant une arête allant vers $j$ au temps $t$ et $Pa_{t-1}(j)$ l'ensemble des neurones ayant une arête "retard" allant vers $j$.
+
+Une manière commode de mettre en évidence cette dépendance temporelle est de déplier le graphe. 
+
+% Insérer figure avec les instants t-1, t et t+1 d'un réseau
+
+On peut même pour une séquence d'entrée donnée modéliser tous les calculs du réseau sans aucun cycle si on déplie le réseau un nombre suffisant de fois.
+
+% Insérer figure avec le réseau déplier pour une séquence d'entrée
+
+
+\section{RTRL}
+
+\section{BPTT}
+
+\section{Évaluation}
+
+\subsection{Grammaire de Reber}
+
+Dans un premier temps, nous comparerons ces algorithmes sur l'apprentissage de la grammaire de Reber, qui est régulière. Nous utiliserons la grammaire simple présentée sur la figure \ref{Grammaire de Reber simple}.
 
 \begin{figure}[h!]
 \begin{center}
 \includegraphics[scale=0.3]{images/reber_simple.png}
-\caption{Grammaire de Reber simple}
+\caption{Automate reconnaissant la grammaire de Reber simple}
 \label{Grammaire de Reber simple}
 \end{center}
 \end{figure}
 
-A l'aide de cette grammaire, nous créons un automate permettant de générer deux ensembles de mots afin d'entraîner et de tester notre futur réseau. L'objectif du réseau sera alors d'apprendre cette grammaire afin de prédire les caractères possibles après un caractère donné.
+A l'aide de cette automate, nous générerons deux ensembles de mots respectivement afin d'entraîner et de tester notre futur réseau. L'objectif du réseau sera alors d'apprendre cette grammaire afin de prédire les caractères possibles après un caractère donné.
 
-\bigbreak
 L'étape suivante consistera à tester les algorithmes sur l'apprentissage de la grammaire de Reber symmétrique présentée sur la figure \ref{Grammaire de Reber symmétrique}.  
 \begin{figure}[h!]
 \begin{center}
 \includegraphics[scale=0.5]{images/reber_symmetrique.png}
-\caption{Grammaire de Reber symmétrique}
+\caption{Automate reconnaissant la grammaire de Reber symmétrique}
 \label{Grammaire de Reber symmétrique}
 \end{center}
 \end{figure}
@@ -771,16 +836,11 @@ L'étape suivante consistera à tester les algorithmes sur l'apprentissage de la
 Dans cette situation, le réseau devra être capable de se souvenir d'un état passé (T ou P) afin de prédire le nouvel état (T ou P). Cet état passé pourra être plus ou moins lointain en fonction de la taille de la grammaire de Reber insérée au milieu. 
 \bigbreak
 \bigbreak
+
+\subsection{Shakespeare}
+
 Enfin, nous appliquerons ces deux algorithmes à l'apprentissage de textes de Shakespeare. L'objectif sera alors de générer un texte anglais cohérent.
-\section{Deux algorithmes}
-\subsection{Real Time Recurrent Learning (RTRL)}
-\subsection{Back Propagation Through Time (BPTT)}
-\section{Implémentation de RTRL}
-\subsection{Principe de fonctionnement}
-\subsection{Résultats}
-\section{Implémentation de BPTT}
-\subsection{Principe de fonctionnement}
-\subsection{Résultats}
+
 \section{Comparaison des deux algorithmes}
 
 \chapter{Long Short-Term Memory (LSTM)}
