--- a/chapitre3.tex
+++ b/chapitre3.tex
@@ -6,7 +6,7 @@ Nous avons vu précédemment que l'architecture du réseau de neurones peut êtr
 
 \begin{figure}
 \begin{center}
-\input{images/reseau_3_5_3.tex}
+\input{images/chapter3/reseau_3_5_3.tex}
 \end{center}
 \caption{Réseau de neurones à 3 entrées, 5 neurones cachés et 3 neurones de sorties}
 \label{reseau_3_5_3}
@@ -121,26 +121,63 @@ Maintenant que les graphes de calculs ont été présentés de manière théoriq
 
 Un n\oe{}ud aura deux missions : calculer sa sortie et rétropropager le gradient. Nous représentions ces deux opérations sur la figure \ref{node}.
 
+\begin{figure}
+\begin{center}
+\begin{tabular}{cc}
+\input{images/chapter3/node_propagation.tex} & \input{images/chapter3/node_backpropagation.tex} \\
+\end{tabular}
+\end{center}
+\label{node}
+\end{figure}
+
 Lors de la propagation, un n\oe{}ud demande ses entrées à ses parents puis calcule sa sortie et la mémoïse. De façon analogue, lors de la rétropropagation, un n\oe{}ud demande à chacun de ses enfants le gradient par rapport à la sortie qu'ils utilisent.
 
 \subsection{Les opérations mathématiques}
 
+Dans cette sous-section, nous allons décrire les symboles ainsi que les formules des n\oe{}uds que nous avons implémentés.
+
+\begin{figure}[h!]
+\begin{center}
+\begin{tabular}{|m{4cm}|m{3.cm}|m{3.cm}|}
+\hline
+\begin{center}Symbole\end{center} & \begin{center}Formule de propagation\end{center} & \begin{center}Formule de rétropropagation\end{center} \\
+\hline
+\begin{center}\input{images/chapter3/nodes/node_sigmoid.tex}\end{center} & \begin{center}$\sigma(x) = \frac{1}{1 + \exp(-x)}$\end{center} & \begin{center}$\frac{\partial E}{\partial y} \odot y \odot (1 - y)$\end{center} \\
+\hline
+\begin{center}\input{images/chapter3/nodes/node_tanh.tex}\end{center} & \begin{center}$\tanh(x)$\end{center} & \begin{center}$\frac{\partial E}{\partial y} \odot (1 - y \odot y)$\end{center} \\ 
+\hline
+\end{tabular}
+\end{center}
+\caption{N\oe{}ud à une entrée et une sortie}
+\end{figure}
+
+\begin{figure}[h!]
+\begin{center}
+\begin{tabular}{|m{4cm}|m{3.cm}|m{3.cm}|}
+\hline
+\begin{center}Symbole\end{center} & \begin{center}Formule de propagation\end{center} & \begin{center}Formule de rétropropagation\end{center} \\
+\hline
+\begin{center}\input{images/chapter3/nodes/node_addition.tex}\end{center} & \begin{center}$x_1 + x_2$\end{center} & \begin{center}$(\frac{\partial E}{\partial y}, \frac{\partial E}{\partial y})$\end{center} \\
+\hline
+\begin{center}\input{images/chapter3/nodes/node_substraction.tex}\end{center} & \begin{center}$x_1 - x_2$\end{center} & \begin{center}$(\frac{\partial E}{\partial y}, -\frac{\partial E}{\partial y})$\end{center} \\
+\hline
+\begin{center}\input{images/chapter3/nodes/node_multiplication.tex}\end{center} & \begin{center}$x_1 \times x_2$\end{center} & \begin{center}$(\frac{\partial E}{\partial y}x_2^T, x_1^T\frac{\partial E}{\partial y})$\end{center} \\
+\hline
+\begin{center}\input{images/chapter3/nodes/node_ew_multiplication.tex}\end{center} & \begin{center}$x_1 \odot x_2$\end{center} & \begin{center}$(\frac{\partial E}{\partial y} \odot x_2, \frac{\partial E}{\partial y} \odot x_1)$\end{center} \\
+\hline
+\end{tabular}
+\end{center}
+\caption{N\oe{}ud à deux entrées et une sortie}
+\end{figure}
+
+\subsection{Démonstrations}
+
+\section{La classe Graph}
+
 
 \section{Diagramme UML}
 
-\begin{figure}[!h]
-\centering
 
-\tikzset{every picture/.style={scale=0.6}}
-\input{"images/graphe_de_calcul.tex"}
-\caption{Schéma d'un graphe de calcul pour un neurone simple}
-\label{graphe_de_calcul}
-\end{figure}
-
-
-
-
-
-\section{Résultats}
+\section{Conclusion}
 
 L'architecture en Graphe de Calcul donne de très bons résultats du point de vue de la rapidité de calcul. On observe par exemple une réduction d'un facteur 1000 du temps de calcul pour l'entrainement du réseau simple sur l'ensemble MNIST par rapport à l'implémentation "naïve" du chapitre 2. Ces performances sont atteintes grâce à la diminution du nombre d'appels objets, remplacés par des calculs matriciels sur des matrices de grande taille gérées par des bibliothèques efficaces.
